# messages_microservice

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  config.py  pyproject.toml
alembic/: env.py
database/: general.py
handlers/: __init__.py  base.py  general.py
src/: app.py  config.py  database.py  logger.py
src/depends/: database.py
src/handlers/: general.py
src/utils/: logger.py
tests/: conftest.py  test_base.py
utils/: logger.py
